--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,10 +17,10 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="/loginform">로그인</a>
+                <a class="nav-link" href="blog/loginform">로그인</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/joinform">회원가입</a>
+                <a class="nav-link" href="blog/joinform">회원가입</a>
             </li>
             </li>
         </ul>
