--- a/src/main/resources/templates/user/joinform.html
+++ b/src/main/resources/templates/user/joinform.html
@@ -10,7 +10,6 @@
 
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
     <a class="navbar-brand" href="/">홈</a>
-    <!--    href : 링크-->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -22,7 +21,6 @@
             <li class="nav-item">
                 <a class="nav-link" href="/joinform">회원가입</a>
             </li>
-            </li>
         </ul>
     </div>
 </nav>
@@ -30,25 +28,32 @@
 
 <div class="container">
     <h2>Stacked form</h2>
-    <form action="/action_page.php">
+    <form id="join-form" action="/blog/join" method="post">
+        <div class="form-group">
+            <label for="username">Username:</label>
+            <div class="input-group">
+                <input type="text" class="form-control" id="username" placeholder="Enter username" name="username">
+                <div class="input-group-append">
+                </div>
+            </div>
+            <span id="username-msg"></span>
+        </div>
         <div class="form-group">
             <label for="email">Email:</label>
-            <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+            <div class="input-group">
+                <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+                <div class="input-group-append">
+                </div>
+            </div>
+            <span id="email-msg"></span>
         </div>
         <div class="form-group">
-            <label for="pwd">Password:</label>
-            <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pswd">
-        </div>
-        <div class="form-group form-check">
-            <label class="form-check-label">
-                <input class="form-check-input" type="checkbox" name="remember"> Remember me
-            </label>
+            <label for="password">Password:</label>
+            <input type="password" class="form-control" id="password" placeholder="Enter password" name="password">
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </div>
-
-
 <div class="jumbotron text-center" style="margin-bottom:0">
     <p>Created by Yujin</p>
     <p>010-5408-7492</p>
@@ -58,5 +63,6 @@
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="user/user.js"></script>
 </body>
 </html>
