--- a/src/main/resources/templates/user/joinform.html
+++ b/src/main/resources/templates/user/joinform.html
@@ -27,32 +27,28 @@
 <br>
 
 <div class="container">
-    <h2>Stacked form</h2>
-    <form id="join-form" action="/blog/join" method="post">
+    <h2>회원가입</h2>
+    <form>
         <div class="form-group">
             <label for="username">Username:</label>
             <div class="input-group">
                 <input type="text" class="form-control" id="username" placeholder="Enter username" name="username">
-                <div class="input-group-append">
-                </div>
             </div>
-            <span id="username-msg"></span>
+        </div>
+        <div class="form-group">
+            <label for="password">Password:</label>
+            <div class="input-group">
+                <input type="password" class="form-control" id="password" placeholder="Enter password" name="password">
+            </div>
         </div>
         <div class="form-group">
             <label for="email">Email:</label>
             <div class="input-group">
                 <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
-                <div class="input-group-append">
-                </div>
             </div>
-            <span id="email-msg"></span>
         </div>
-        <div class="form-group">
-            <label for="password">Password:</label>
-            <input type="password" class="form-control" id="password" placeholder="Enter password" name="password">
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+    <button id="btn-save" class="btn btn-primary">회원가입 완료</button>
 </div>
 <div class="jumbotron text-center" style="margin-bottom:0">
     <p>Created by Yujin</p>
@@ -60,9 +56,42 @@
     <p>충청남도 천안시 XX동</p>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-<script src="user/user.js"></script>
+<script>
+    let index = {
+        init: function () {
+            $("#btn-save").on("click", () => {
+                this.save();
+            });
+        },
+        save: function () {
+            let data = {
+                username: $("#username").val(),
+                email: $("#email").val(),
+                password: $("#password").val()
+            };
+
+            $.ajax({
+                type: "POST",
+                url: "/api/user/join",
+                data: JSON.stringify(data), // HTTP body
+                contentType: "application/json",
+            }).done(function (resp) {
+                alert("회원가입이 완료되었습니다.");
+                location.href = "/";
+            }).fail(function (error) {
+                if (error.status === 500) {
+                    alert("회원가입에 실패하였습니다.");
+                } else {
+                    alert(JSON.stringify(error));
+                }
+            });
+        }
+    };
+
+    index.init();
+</script>
 </body>
 </html>
