--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/extras/spring-security">
 <head>
     <title>Bootstrap Example</title>
     <meta charset="utf-8">
@@ -16,12 +16,26 @@
     </button>
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="blog/loginform">로그인</a>
+            <li class="nav-item" sec:authorize="isAnonymous()">
+                <a class="nav-link" href="/auth/loginform">로그인</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="blog/joinform">회원가입</a>
+            <li class="nav-item" sec:authorize="isAnonymous()">
+                <a class="nav-link" href="/auth/joinform">회원가입</a>
             </li>
+
+            <li class="nav-item" sec:authorize="isAuthenticated()">
+                <a class="nav-link" href="/board/form">글 작성</a>
+            </li>
+            <li class="nav-item dropdown" sec:authorize="isAuthenticated()">
+                <a class="nav-link dropdown-toggle" href="#" id="user-name" data-toggle="dropdown" sec:authentication="name">
+                    사용자 이름
+                </a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="/user/form">설정</a>
+                    <a class="dropdown-item" href="#">블로그 이동</a>
+                    <a class="dropdown-item" href="#">임시저장글 목록 보기</a>
+                    <a class="dropdown-item" href="/logout">로그아웃</a>
+                </div>
             </li>
         </ul>
     </div>
@@ -29,7 +43,7 @@
 <br>
 <div class="container">
     <div class="card m-2">
-        <img class="card-img-top" src="img_avatar1.png" alt="Card image">
+<!--        <img class="card-img-top" src="img_avatar1.png" alt="Card image">-->
         <div class="card-body">
             <h4 class="card-title">제목 적는 부분</h4>
             <p class="card-text">내용 적는 부분</p>
@@ -39,7 +53,7 @@
 </div>
 <div class="container">
     <div class="card m-2">
-        <img class="card-img-top" src="img_avatar1.png" alt="Card image">
+<!--        <img class="card-img-top" src="img_avatar1.png" alt="Card image">-->
         <div class="card-body">
             <h4 class="card-title">제목 적는 부분</h4>
             <p class="card-text">내용 적는 부분</p>
@@ -49,7 +63,7 @@
 </div>
 <div class="container">
     <div class="card m-2">
-        <img class="card-img-top" src="img_avatar1.png" alt="Card image">
+<!--        <img class="card-img-top" src="img_avatar1.png" alt="Card image">-->
         <div class="card-body">
             <h4 class="card-title">제목 적는 부분</h4>
             <p class="card-text">내용 적는 부분</p>
