--- a/src/main/resources/templates/layout/footer.html
+++ b/src/main/resources/templates/layout/footer.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div class="jumbotron text-center" style="margin-bottom:0">
+  <p>Created by Yujin</p>
+  <p>010-5408-7492</p>
+  <p>충청남도 천안시 XX동</p>
+</div>
