--- a/src/main/resources/templates/user/joinform.html
+++ b/src/main/resources/templates/user/joinform.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/extras/spring-security">
 <head>
     <title>Bootstrap Example</title>
     <meta charset="utf-8">
@@ -9,17 +9,33 @@
 <body>
 
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-    <a class="navbar-brand" href="/">홈</a>
+    <a class="navbar-brand" href="/static">홈</a>
+    <!--    href : 링크-->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="/loginform">로그인</a>
+            <li class="nav-item" sec:authorize="isAnonymous()">
+                <a class="nav-link" href="/auth/loginform">로그인</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/joinform">회원가입</a>
+            <li class="nav-item" sec:authorize="isAnonymous()">
+                <a class="nav-link" href="/auth/joinform">회원가입</a>
+            </li>
+
+            <li class="nav-item" sec:authorize="isAuthenticated()">
+                <a class="nav-link" href="/board/form">글 작성</a>
+            </li>
+            <li class="nav-item dropdown" sec:authorize="isAuthenticated()">
+                <a class="nav-link dropdown-toggle" href="#" id="user-name" data-toggle="dropdown" sec:authentication="name">
+                    사용자 이름
+                </a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="/user/form">설정</a>
+                    <a class="dropdown-item" href="#">블로그 이동</a>
+                    <a class="dropdown-item" href="#">임시저장글 목록 보기</a>
+                    <a class="dropdown-item" href="/logout">로그아웃</a>
+                </div>
             </li>
         </ul>
     </div>
@@ -63,8 +79,49 @@
     let index = {
         init: function () {
             $("#btn-save").on("click", () => {
-                this.save();
+                this.checkUsernameAndEmail();
             });
+        },
+        checkUsernameAndEmail: function () {
+            let username = $("#username").val();
+            let email = $("#email").val();
+
+            this.checkUsername(username)
+                .then((usernameExists) => {
+                    if (usernameExists) {
+                        alert("중복된 이름입니다. 다시 시도하세요.");
+                        return Promise.reject();
+                    }
+                    return this.checkEmail(email);
+                })
+                .then((emailExists) => {
+                    if (emailExists) {
+                        alert("중복된 이메일입니다. 다시 시도하세요.");
+                        return Promise.reject();
+                    }
+                    this.save();
+                })
+                .catch((error) => {
+                    if (error) {
+                        console.error(error);
+                    }
+                });
+        },
+        checkUsername: function (username) {
+            return $.ajax({
+                type: "GET",
+                url: "/api/user/check-username",
+                data: { username: username },
+                contentType: "application/json"
+            }).then(response => response.exists);
+        },
+        checkEmail: function (email) {
+            return $.ajax({
+                type: "GET",
+                url: "/api/user/check-email",
+                data: { email: email },
+                contentType: "application/json"
+            }).then(response => response.exists);
         },
         save: function () {
             let data = {
@@ -75,22 +132,21 @@
 
             $.ajax({
                 type: "POST",
-                url: "/api/user/join",
+                url: "/auth/join",
                 data: JSON.stringify(data), // HTTP body
                 contentType: "application/json",
             }).done(function (resp) {
-                alert("회원가입이 완료되었습니다.");
+                alert(resp);
                 location.href = "/";
             }).fail(function (error) {
                 if (error.status === 500) {
-                    alert("회원가입에 실패하였습니다.");
+                    alert(error.responseText);
                 } else {
                     alert(JSON.stringify(error));
                 }
             });
         }
     };
-
     index.init();
 </script>
 </body>
