--- a/src/main/resources/templates/user/joinform.html
+++ b/src/main/resources/templates/user/joinform.html
@@ -9,7 +9,7 @@
 <body>
 
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-    <a class="navbar-brand" href="/static">홈</a>
+    <a class="navbar-brand" href="/">홈</a>
     <!--    href : 링크-->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
@@ -24,14 +24,14 @@
             </li>
 
             <li class="nav-item" sec:authorize="isAuthenticated()">
-                <a class="nav-link" href="/board/form">글 작성</a>
+                <a class="nav-link" href="/board/saveform">글 작성</a>
             </li>
             <li class="nav-item dropdown" sec:authorize="isAuthenticated()">
                 <a class="nav-link dropdown-toggle" href="#" id="user-name" data-toggle="dropdown" sec:authentication="name">
                     사용자 이름
                 </a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="/user/form">설정</a>
+                    <a class="dropdown-item" href="/user/updateform">설정</a>
                     <a class="dropdown-item" href="#">블로그 이동</a>
                     <a class="dropdown-item" href="#">임시저장글 목록 보기</a>
                     <a class="dropdown-item" href="/logout">로그아웃</a>
