--- a/src/main/resources/templates/board/updateform.html
+++ b/src/main/resources/templates/board/updateform.html
@@ -47,31 +47,21 @@
 
 <div class="container">
     <form>
-<!--        <button class="btn btn-secondary" onclick="history.back()">홈</button>-->
-        <a th:href="@{/board/{postId}/updateform(postId=${post.id})}"
-           class="btn btn-warning"
-           th:if="${#authentication.principal.username == post.user.username}">
-            수정
-        </a>
-        <button id="btn-delete" class="btn btn-danger" th:if="${#authentication.principal.username == post.user.username}">삭제</button>
-
-        <br/><br/>
-
-        <div>
-            글 번호 : <span id="id"><i th:text="${post.id}"></i> </span>
-            작성자 : <span><i th:text="${post.user.username}"></i> </span>
-        </div>
-        <br/>
-        <div>
-            <h3 th:text="${post.title}"></h3>
-        </div>
-        <hr>
-        <div>
-            <div th:utext="${post.content}">
+        <input type="hidden" id="id" th:value="${post.id}">
+        <div class="form-group">
+            <label for="title">Title</label>
+            <div class="input-group">
+                <input th:value="${post.title}" type="text" class="form-control" id="title" placeholder="Enter title">
             </div>
+
+        </div>
+        <div class="form-group">
+            <label for="content">Content</label>
+            <textarea class="form-control summernote" rows="5" id="content" th:text="${post.content}"></textarea>
         </div>
 
     </form>
+    <button type="submit" class="btn btn-primary" id="btn-update">글 수정 완료</button>
 </div>
 
 
@@ -86,20 +76,34 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-bs4.min.js"></script>
 <script>
+    $(document).ready(function() {
+        $('.summernote').summernote({
+            placeholder: 'Hello Bootstrap 4',
+            tabsize: 2,
+            height: 300
+        });
+    });
+</script>
+<script>
     let index = {
         init: function () {
-            $("#btn-delete").on("click", () => {
-                this.deleteById();
+            $("#btn-update").on("click", () => {
+                this.update();
             });
         },
-        deleteById: function () {
-            let id = $("#id").text(); // 이 부분에서 id 값을 올바르게 가져오는지 확인
+        update: function () {
+            let id = $("#id").val();
 
+            let data = {
+                title: $("#title").val(),
+                content: $("#content").val()
+            };
 
             $.ajax({
-
-                type: "DELETE",
-                url: "/api/board/"+ id
+                type: "PUT",
+                url: "/api/board/"+id,
+                data: JSON.stringify(data),
+                contentType: "application/json"
             })
                 .done(function (response) {
                     alert(response); // 서버에서 반환한 메시지를 알림창으로 표시
@@ -120,3 +124,4 @@
 </script>
 </body>
 </html>
+
