--- a/src/main/resources/templates/user/info.html
+++ b/src/main/resources/templates/user/info.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/extras/spring-security">
 <head>
-    <title>Bootstrap Example</title>
+    <title>User Blog</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-bs4.min.css" rel="stylesheet">
-
-
 </head>
 <body>
 
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
     <a class="navbar-brand" href="/">홈</a>
-    <!--    href : 링크-->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -26,7 +21,6 @@
             <li class="nav-item" sec:authorize="isAnonymous()">
                 <a class="nav-link" href="/auth/joinform">회원가입</a>
             </li>
-
             <li class="nav-item" sec:authorize="isAuthenticated()">
                 <a class="nav-link" href="/board/saveform">글 작성</a>
             </li>
@@ -36,7 +30,7 @@
                 </a>
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="/user/updateform">설정</a>
-                    <a class="dropdown-item" href="#">블로그 이동</a>
+                    <a class="dropdown-item" href="/user/blog">블로그 이동</a>
                     <a class="dropdown-item" href="#">임시저장글 목록 보기</a>
                     <a class="dropdown-item" href="/logout">로그아웃</a>
                 </div>
@@ -44,36 +38,54 @@
         </ul>
     </div>
 </nav>
+<br>
 
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="UTF-8">
+    <title>User Profile</title>
+</head>
+<body>
 <div class="container">
-    <form>
-<!--        <button class="btn btn-secondary" onclick="history.back()">홈</button>-->
-        <a th:href="@{/board/{postId}/updateform(postId=${post.id})}"
-           class="btn btn-warning"
-           th:if="${#authentication.principal.username == post.user.username}">
-            수정
-        </a>
-        <button id="btn-delete" class="btn btn-danger" th:if="${#authentication.principal.username == post.user.username}">삭제</button>
-
-        <br/><br/>
-
-        <div>
-            글 번호 : <span id="id"><i th:text="${post.id}"></i> </span>
-            작성자 : <span><i th:text="${post.user.username}"></i> </span>
+    <div class="row">
+        <div class="col-md-4">
+            <h2>사용자 프로필</h2>
+            <img th:src="@{${user.profileImage}}" alt="프로필 이미지" class="img-thumbnail">
+            <h3 th:text="${user.username}">사용자명</h3>
+            <h4 th:text="${user.blogTitle}">블로그 제목</h4>
+            <p th:text="${user.bio}">소개</p>
         </div>
-        <br/>
-        <div>
-            <h3 th:text="${post.title}"></h3>
-        </div>
-        <hr>
-        <div>
-            <div th:utext="${post.content}">
+
+        <div class="col-md-8">
+            <h2>최신 포스트</h2>
+            <div class="row">
+                <!-- 최신 포스트 루프 -->
+                <div class="col-md-6" th:each="post : ${latestPosts}">
+                    <div class="card mb-3">
+                        <!-- 이미지 부분 -->
+                        <div th:if="${post.content.matches('.*<img[^>]*>.*')}"
+                             th:utext="${post.content.replaceAll('.*?(<img[^>]*>).*', '$1')}">
+                        </div>
+                        <div class="card-body">
+                            <!-- 제목 -->
+                            <h5 class="card-title" th:text="${post.title}"></h5>
+                            <!-- 내용 -->
+                            <p class="card-text" th:utext="${#strings.length(post.content) > 100 ? #strings.substring(post.content, 0, 100) + '...' : post.content}"></p>
+                            <!-- 작성일 -->
+                            <p class="card-text"><small class="text-muted" th:text="${#temporals.format(post.createdDate, 'yyyy-MM-dd HH:mm:ss')}">게시일</small></p>
+                            <!-- 상세 보기 링크 -->
+                            <a th:href="@{/board/{id}(id=${post.id})}" class="btn btn-primary">상세 보기</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- 최신 포스트 루프 끝 -->
             </div>
         </div>
-
-    </form>
+    </div>
 </div>
-
+</body>
+</html>
 
 
 <div class="jumbotron text-center" style="margin-bottom:0">
@@ -81,42 +93,10 @@
     <p>010-5408-7492</p>
     <p>충청남도 천안시 XX동</p>
 </div>
+
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-bs4.min.js"></script>
-<script>
-    let index = {
-        init: function () {
-            $("#btn-delete").on("click", () => {
-                this.deleteById();
-            });
-        },
-        deleteById: function () {
-            let id = $("#id").text(); // 이 부분에서 id 값을 올바르게 가져오는지 확인
 
-
-            $.ajax({
-
-                type: "DELETE",
-                url: "/api/board/"+ id
-            })
-                .done(function (response) {
-                    alert(response); // 서버에서 반환한 메시지를 알림창으로 표시
-                    location.href = "/"; // 성공 시 메인 페이지로 이동
-                })
-                .fail(function (error) {
-                    if (error.status === 500) {
-                        alert("서버 오류가 발생했습니다."); // 서버 오류 처리
-                    } else {
-                        alert("오류가 발생했습니다: " + error.responseText); // 기타 오류 처리
-                    }
-                });
-        }
-    };
-
-    index.init();
-
-</script>
 </body>
 </html>
