--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,7 +32,8 @@
                 </a>
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="/user/updateform">설정</a>
-                    <a class="dropdown-item" href="/user/info">블로그 이동</a>
+                    <a class="dropdown-item" href="user/info">블로그 이동</a>
+
                     <a class="dropdown-item" href="#">임시저장글 목록 보기</a>
                     <a class="dropdown-item" href="/logout">로그아웃</a>
                 </div>
