--- a/src/main/resources/templates/user/info.html
+++ b/src/main/resources/templates/user/info.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/extras/spring-security">
 <head>
-    <title>User Blog</title>
+    <title>Bootstrap Example</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
@@ -10,6 +10,7 @@
 
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
     <a class="navbar-brand" href="/">홈</a>
+    <!--    href : 링크-->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -21,6 +22,7 @@
             <li class="nav-item" sec:authorize="isAnonymous()">
                 <a class="nav-link" href="/auth/joinform">회원가입</a>
             </li>
+
             <li class="nav-item" sec:authorize="isAuthenticated()">
                 <a class="nav-link" href="/board/saveform">글 작성</a>
             </li>
@@ -30,7 +32,7 @@
                 </a>
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="/user/updateform">설정</a>
-                    <a class="dropdown-item" href="/user/blog">블로그 이동</a>
+                    <a class="dropdown-item" href="/user/info">블로그 이동</a>
                     <a class="dropdown-item" href="#">임시저장글 목록 보기</a>
                     <a class="dropdown-item" href="/logout">로그아웃</a>
                 </div>
@@ -40,53 +42,38 @@
 </nav>
 <br>
 
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>User Profile</title>
-</head>
-<body>
-<div class="container">
-    <div class="row">
-        <div class="col-md-4">
-            <h2>사용자 프로필</h2>
-            <img th:src="@{${user.profileImage}}" alt="프로필 이미지" class="img-thumbnail">
-            <h3 th:text="${user.username}">사용자명</h3>
-            <h4 th:text="${user.blogTitle}">블로그 제목</h4>
-            <p th:text="${user.bio}">소개</p>
+<div class="container mt-4">
+    <div class="container mt-4">
+        <div class="row align-items-center">
+            <!-- 왼쪽: 프로필 사진 -->
+            <div class="col-md-3 text-center" th:if="${user.profileImage}">
+                <img th:src="${user.profileImage}" alt="프로필 사진" class="profile-image img-fluid mb-3">
+            </div>
+            <!-- 오른쪽: 타이틀과 바이오 -->
+            <div class="col-md-9">
+                <p class="mb-1 text-muted font-weight-light" th:text="${user.username} + '의 프로필'"></p>
+                <h2 class="text-black font-weight-bold mb-3" th:text="${user.blogTitle}"></h2>
+                <p class="lead text-black" th:text="${user.bio}"></p>
+            </div>
         </div>
+    <hr>
 
-        <div class="col-md-8">
-            <h2>최신 포스트</h2>
-            <div class="row">
-                <!-- 최신 포스트 루프 -->
-                <div class="col-md-6" th:each="post : ${latestPosts}">
-                    <div class="card mb-3">
-                        <!-- 이미지 부분 -->
-                        <div th:if="${post.content.matches('.*<img[^>]*>.*')}"
-                             th:utext="${post.content.replaceAll('.*?(<img[^>]*>).*', '$1')}">
-                        </div>
-                        <div class="card-body">
-                            <!-- 제목 -->
-                            <h5 class="card-title" th:text="${post.title}"></h5>
-                            <!-- 내용 -->
-                            <p class="card-text" th:utext="${#strings.length(post.content) > 100 ? #strings.substring(post.content, 0, 100) + '...' : post.content}"></p>
-                            <!-- 작성일 -->
-                            <p class="card-text"><small class="text-muted" th:text="${#temporals.format(post.createdDate, 'yyyy-MM-dd HH:mm:ss')}">게시일</small></p>
-                            <!-- 상세 보기 링크 -->
-                            <a th:href="@{/board/{id}(id=${post.id})}" class="btn btn-primary">상세 보기</a>
-                        </div>
+    <div class="row mt-4">
+        <div class="col-md-12">
+            <h3>작성한 글</h3>
+            <div th:each="post : ${userPosts}">
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <h5 class="card-title" th:text="${post.title}"></h5>
+                        <p class="card-text" th:utext="${post.content}"></p>
+                        <p class="card-text"><small class="text-muted" th:text="${#temporals.format(post.createdDate, 'yyyy-MM-dd HH:mm')}">작성일</small></p>
+                        <a th:href="@{/board/{id}(id=${post.id})}" class="btn btn-primary">자세히 보기</a>
                     </div>
                 </div>
-                <!-- 최신 포스트 루프 끝 -->
             </div>
         </div>
     </div>
 </div>
-</body>
-</html>
-
 
 <div class="jumbotron text-center" style="margin-bottom:0">
     <p>Created by Yujin</p>
@@ -94,9 +81,8 @@
     <p>충청남도 천안시 XX동</p>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-
 </body>
 </html>
